# self-starter

./: .gitignore  README.md  TODO.md  projects.md
.github/ISSUE_TEMPLATE/: features.md
docs/1-ai-llm/: README.md
docs/1-ai-llm/dify/: README.md
docs/ai-awesome/: nav.yaml
docs/api-spec/: TODO.yaml  fern-api.md
docs/cases/llm/: dify.md
docs/db-bi/: subapase.md
docs/devops/: 1-Docker-Orbstack.md
docs/features/issues/: collect-publish.md  data-collect.md  tutorial-maker.md
docs/free/database/: free-clouddb.md
docs/low-code/: references.yaml
docs/sass-how-to/: index.md
docs/sass-how-to/database/: free-clouddb.md
lessons/fluent-ais/: README.md  environment.yaml  pyproject.toml
lessons/fluent-ais/.devcontainer/: environment.yml
lessons/fluent-ais/docs/: 1-enveironment.md  quick-overview.md
lessons/fluent-ais/tests/: logging_test.py
saas-kits/susu/suapi/: .env  go.mod  go.sum  main.go
self-hosts/: .gitignore
self-hosts/ai-llmops/: free-gpt4.sh
self-hosts/ai-llmops/dify/: .gitignore  docker-compose.yaml  docker-compose_bnk.yaml  reset-password.sh
self-hosts/db-bi/minddb/: .gitignore  run.sh
self-hosts/db-bi/mongo/: docker-compose.yml
self-hosts/db-bi/open-metadata/: README.md  init.sh
self-hosts/db-bi/questdb/: docker-compose.yml  run.sh
self-hosts/db-bi/redis/: compose.yaml
self-hosts/db-bi/supabase/: infor.txt  kong-run.sh  sync.sh
self-hosts/db-bi/surrealdb/: README.md
self-hosts/db-bi/timescale/: docker-compose.yml
self-hosts/devops/: easypanel.sh
services/suapi/: main.go
susu/: supabase-cli-run.sh
(+27 files in other folders)
